--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,19 @@
   <version>2.1.0-SNAPSHOT</version>
   <name>panda</name>
   <description>Demo project for Spring Boot</description>
+  
+   <distributionManagement>
+      <repository>
+        <id>artifactory</id>
+        <name>release</name>
+        <url>http://localhost:8081/artifactory/libs-release-local</url>
+      </repository>
+      <snapshotRepository>
+        <id>artifactory</id>
+        <name>snapshots</name>
+        <url>http://localhost:8081/artifactory/libs-snapshot-local</url>
+      </snapshotRepository>
+   </distributionManagement>
 
   <properties>
     <java.version>1.8</java.version>
